-fixed the border of the scrollbar being cut off in save_and_export.html

--- a/static/css/partial-order.css
+++ b/static/css/partial-order.css
@@ -60,14 +60,16 @@
 .scrollable {
     overflow: scroll;
     height: auto;
-    /*width: 300px;*/
     width: auto;
     min-width: 100px;
     max-height: 100px;
-    /*background-color: #CCC;*/
     overflow-y: auto;
-    border: 1px solid black;
+}
+
+#border-custom {
+    border: 1.5px solid black;
     border-radius: 10px 10px 10px 10px;
+    padding: 2px 2px 2px 10px;
 }
 
 .scrollable-inner {
@@ -201,3 +203,4 @@
 .hidden {
     visibility: hidden;
 }
+
